# osmium

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: questions.md  research.md
docs/plans/: 2026-03-16-osmium-design.md  2026-03-25-adaptive-smoothing-and-denoising.md  2026-03-27-phoneme-aware-rate-scheduling.md  2026-03-28-vocos-finetune.md  2026-03-29-vocos-phase-regularization.md
docs/research/: fast-speech-literature.md  multi-offset-mimi.md  neural-codec-frame-rates.md  vocoder-comparison.md  vocoder-evaluation-results.md
docs/specs/: 2026-03-25-adaptive-smoothing-and-denoising-design.md  2026-03-27-phoneme-aware-rate-scheduling-design.md  2026-03-28-vocos-finetune-design.md  2026-03-29-vocos-phase-regularization-design.md
scripts/: abx_test.py  compare_phoneme.py  eval_wer.py  generate_accelerated.sh  vocos_finetune.sh  vocos_phase_reg.sh
scripts/vocos_finetune/: augment.py  click_detector.py  convert_mlx.py  dataset.py  download_data.py  evaluate.py  phase_loss.py  train.py  train_phase_reg.py
src/osmium/: cli.py  parallel.py
src/osmium/analyzer/: aligner.py  crepe_mlx.py  denoise.py  denoise_deep.py  denoise_demucs.py  gci.py  importance.py  mel_importance.py  mimi.py  mimi_mlx.py  phoneme_align.py  phoneme_class.py  prosody.py
src/osmium/io/: decode.py  encode.py
src/osmium/tsm/: crepe_enhanced_pv.py  crepe_hybrid.py  declick.py  hpss.py  hybrid.py  phase_vocoder.py  post_process.py  psola_engine.py  rate_schedule.py  smooth.py  stream.py  td_psola.py  vocos_engine.py  vocos_mlx.py  voiced_split.py  wsola.py
tests/: test_declick.py  test_denoise.py  test_mel_importance.py  test_phoneme_align.py  test_phoneme_class.py  test_rate_schedule.py  test_smooth.py  test_vocos_finetune_augment.py  test_vocos_finetune_click.py  test_vocos_finetune_convert.py  test_vocos_finetune_dataset.py  test_vocos_finetune_phase_loss.py  test_vocos_finetune_phase_reg.py  test_vocos_finetune_train.py
