[project]
name = "osmium"
version = "0.1.0"
description = "High-quality speech acceleration for audiobooks"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "soundfile>=0.12",
    "scipy>=1.11",
]

[project.optional-dependencies]
neural = [
    "moshi_mlx>=0.3.0",
    "huggingface_hub>=0.28",
]

[project.scripts]
osmium = "osmium.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osmium"]
