[project]
name = "osmium"
version = "0.1.0"
description = "High-quality speech acceleration for audiobooks"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "soundfile>=0.12",
    "scipy>=1.11",
    "rich>=13.0",
    "noisereduce>=3.0",
    "vocos>=0.1",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.10",
]
neural = [
    "moshi_mlx>=0.3.0",
    "huggingface_hub>=0.28",
]
phoneme = [
    "torchaudio>=2.0",
]
psola = [
    "psola>=0.0.1",
]
demucs = [
    "demucs>=4.0",
]

[project.scripts]
osmium = "osmium.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osmium"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
